# add_fragment

./: .gitignore  README.md  pyproject.toml
add_fragment/: insert_fragment.py  io.py
tests/: combined_system.xyz  test_functionalise.py
tests/test_data/: B-ditjoh-H.xyz  Ph-R.xyz  ac-R.xyz
